css fix button contrast portfolio

--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #2e5b6b;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
